--- a/basket-remote/public/index.html
+++ b/basket-remote/public/index.html
@@ -5,6 +5,6 @@
     <title>Basket Remote</title>
 </head>
 <body>
-    <div id="root"></div> <!-- React burada render olacak -->
+    <div id="root"></div> 
 </body>
 </html>
